Changed index.php and fix spacing

--- a/Part1/style.css
+++ b/Part1/style.css
@@ -6,18 +6,15 @@ html {
     min-height: 100%;
  }
 
-/* Move down content because we have a fixed navbar that is 50px tall */
 body {
     padding-top: 50px;
 }
 
-/* Global add-ons */
 .sub-header {
     padding-bottom: 10px;
     border-bottom: 1px solid #eee;
 }
 
-/* Top navigation Hide default border to remove 1px line. */
 .navbar-fixed-top {
     border: 0;
 }
@@ -37,14 +34,14 @@ body {
     display: block;
     padding: 20px;
     overflow-x: hidden;
-    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+    overflow-y: auto;
     background-color: #f5f5f5;
     border-right: 1px solid #eee;
   }
 }
 
 .nav-sidebar {
-    margin-right: -21px; /* 20px padding + 1px border */
+    margin-right: -21px;
     margin-bottom: 20px;
     margin-left: -20px;
 }
@@ -77,7 +74,6 @@ body {
     margin-top: 0;
 }
 
-
 /* Placeholder dashboard ideas */
 .placeholders {
     margin-bottom: 30px;
@@ -102,7 +98,7 @@ footer {
     padding: 25px 0 5px 0;
     bottom: 0;
     width: 100%;
-    height: 150px;
+    height: 110px;
     background-color: #F6F6F6;
 }
 
